# aoc2022

./: Cargo.toml  readme.md
benches/: days.rs
src/: lib.rs  main.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
