[package]
name = "aoc2022"
authors = ["Dan Boyle <boylede@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.10.0"
time = "0.3.17"
itertools = "0.10.5"
rand = "0.8.5"
rand_chacha ="0.3.1"
clap = { version = "4.0.29", features = ["derive"] }
lazy_static = "1.4.0"
id_tree = "1.8.0"
num = "0.4"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "days"
harness = false
